@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-16T01:14:18Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 1,
-  "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
-  "uniques_prev_day_dec" : 0
+  "timestamp" : "2022-05-17T01:14:00Z",
+  "count" : 2,
+  "count_minmax" : [ 0, 2 ],
+  "count_decinc" : [ -0, +2 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 0, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
