@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-16T01:14:18Z",
-  "count_outdated" : 263,
-  "uniques_outdated" : 141,
-  "count" : 300,
-  "uniques" : 164,
+  "timestamp" : "2022-05-17T01:14:00Z",
+  "count_outdated" : 264,
+  "uniques_outdated" : 142,
+  "count" : 302,
+  "uniques" : 166,
   "clones" : [
-    {
-      "timestamp": "2022-05-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 1,
@@ -88,6 +81,13 @@
       "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-16T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 0, 2 ]
     }
   ]
 }
