@@ -1,12 +1,7 @@
 {
-  "count": 37,
+  "count": 38,
   "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-05-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 1,
@@ -61,6 +56,11 @@
       "timestamp": "2022-05-15T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-16T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
