@@ -1,3 +1,10 @@
+2022-05-17T01:14:00Z:
+* notice: last 14d: all unq: 38 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 263 141 / 300 164
+* notice: next accum: outdated-all outdated-unq / all unq: 264 142 / 302 166
+* notice: prev exec diff / last date diff: unq all: +2 +2 -0 -0 / +2 +2 -0 -0
+* notice: changed dates: [2022-05-16]
+
 2022-05-16T01:14:18Z:
 * notice: last 14d: all unq: 37 13
 * notice: prev accum: outdated-all outdated-unq / all unq: 263 141 / 299 164
